[metadata]
name = videos
description = REST API for videos
license = MIT
license_file = LICENCE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9

[options]
packages = videos
install_requires = requests >=2, flask >= 1.1.2, flask_restful >= 0.3.8
python_requires = >= 3.6
package_dir = src
zip_safe = no